--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ html {
     background-color:var(--background);
 }
 
+.main {
+    padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+}
+
 .header {
     text-align: center;
     width: 100%;
@@ -128,3 +132,13 @@ html {
 #equal {
     border-radius: 0 0 var(--btn-bottom-border-radius) 0;
 }
+
+@media only screen 
+    and (device-width: 375px) 
+    and (device-height: 812px) 
+    and (-webkit-device-pixel-ratio: 3) {
+        .calculator {
+            width: 100%;
+            height: 100%;
+        }
+    }
