--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 :root {
+    background-color:var(--background);
+    font-family: 'Roboto', sans-serif;
+    
     --background: #D3D3D3;
     --calculator-background: #474B4D;
     --border: #000;
@@ -16,6 +19,7 @@
     --calculator-height: 321px;
     --btn-width: 25%;
     --btn-bottom-border-radius: .375em;
+    --result-font-size: 3em;
 }
 
 *,
@@ -26,11 +30,6 @@
   margin: 0;
 }
 
-html {
-    background-color:var(--background);
-    font-family: 'Roboto', sans-serif;
-}
-
 main {
     padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
     margin-top: 1em;
@@ -39,6 +38,7 @@ main {
 .calculator {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     align-content: center;
     justify-content: center;
     margin: 0 auto;
@@ -54,13 +54,14 @@ main {
     display: flex;
     align-items: flex-end;
     justify-content: flex-end;
+    flex-wrap: wrap;
     width: 100%;
     height: 25%;
     color: var(--result);
-    font-size: 3em;
 }
 
 .result {
+    font-size: var(--result-font-size);
     margin-right: .3em;
 }
 
@@ -129,7 +130,9 @@ main {
 
 @media only screen 
     and (max-width: 450px)
-    and (max-height: 850px) {
+    and (max-height: 850px),
+    (max-width: 850px)
+    and (max-height: 450px) {
         main {
             margin-top: 0;
         }
@@ -147,8 +150,8 @@ main {
         }
 
         .result-container {
-            height: 30%;
-            font-size: 5em;
+            height: 35%;
+            font-size: 2.5em;
         }
 
         .result {
