--- a/style.css
+++ b/style.css
@@ -145,8 +145,8 @@ main {
             margin-left: -50vw;
             margin-right: -50vw;
             max-width: 100%;
-            width: 100%;
-            height: 100vh;
+            width: 100vw;
+            height: 90vh;
             border-radius: 0;
         }
 
