--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ main {
 
         .result-container {
             font-size: 2em;
+            min-height: 15vh;
         }
 
         .result {
