--- a/style.css
+++ b/style.css
@@ -57,9 +57,10 @@ main {
     display: flex;
     align-items: flex-end;
     justify-content: flex-end;
-    flex-wrap: wrap;
     width: 100%;
-    height: 25%;
+    height: 5vh;
+    margin-top: 3em;
+    margin-bottom: .5em;
     color: var(--result);
 }
 
@@ -70,10 +71,10 @@ main {
 
 .btn-container {
     display: flex;
+    flex: 1 0 auto;
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
-    height: 75%;
 }
 
 .btn {
@@ -133,8 +134,8 @@ main {
 
 @media only screen 
     and (max-width: 450px)
-    and (max-height: 850px),
-    (max-width: 850px)
+    and (max-height: 950px),
+    (max-width: 950px)
     and (max-height: 450px) {
         main {
             margin-top: 0;
@@ -147,9 +148,8 @@ main {
             margin-left: -50vw;
             margin-right: -50vw;
             max-width: 100%;
-            min-height: 85vh;
-            width: var(--screen-width);
-            height: var(--screen-height);
+            width: 100%;
+            height: 85vh;
             border-radius: 0;
         }
 
